<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/forty_six_px"
        android:layout_marginTop="@dimen/thirty_px"
        android:text="@string/toLogin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/thirty_four_px" />

    <ImageView
        android:id="@+id/close_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/forty_six_px"
        android:layout_marginTop="@dimen/thirty_px"
        android:src="@mipmap/close" />

    <ImageView
        android:id="@+id/user_black_line_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_login_activity"
        android:layout_marginLeft="@dimen/thirty_px"
        android:layout_marginRight="@dimen/thirty_px"
        android:layout_marginTop="@dimen/sixteen_px"
        android:background="@mipmap/userblackline" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/user_black_line_login_activity"
        android:layout_marginLeft="@dimen/thirty_px"
        android:layout_marginRight="@dimen/thirty_px"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forty_px"
            android:text="@string/mobilePhoneNo"
            android:textColor="@color/dark"
            android:textSize="@dimen/twenty_four_px" />

        <EditText
            android:id="@+id/et_user_number_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_px"
            android:background="@mipmap/hint_phonenum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_px"
            android:text="@string/password"
            android:textColor="@color/dark"
            android:textSize="@dimen/twenty_four_px"
            />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_user_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_px"
            android:background="@mipmap/hint_phonenum" />

        <TextView
            android:background="@mipmap/login_no_button"
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forty_px"
            android:gravity="center"
            android:text="@string/theLogin"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_four_px" />

        <TextView
            android:background="@drawable/selector_create_account_login_button"
            android:id="@+id/tv_create_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_px"
            android:gravity="center"
            android:text="@string/createAccount"
            android:textColor="@color/dark"
            android:textSize="@dimen/thirty_four_px" />

        <TextView
            android:layout_marginTop="@dimen/one_hundred_and_eighty_px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usingSocialNetworkingAccount"
            android:gravity="center"
            android:textColor="@color/dark"
            android:textSize="@dimen/thirty_four_px"
            />
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/sixty_px"
            android:gravity="center">

            <ImageView
                android:id="@+id/weichate_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/weichat_icon"/>
            <TextView
                android:layout_width="@dimen/one_hundred_and_twenty_px"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/sina_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/sina_icon"/>
        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>