<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fortySix"
        android:layout_marginTop="@dimen/thirty_px"
        android:text="@string/createAccount"
        android:textColor="@color/dark"
        android:textSize="@dimen/thirty_four_px" />

    <ImageView
        android:id="@+id/close_register_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fortySix"
        android:layout_marginTop="@dimen/thirty_px"
        android:src="@mipmap/close" />

    <ImageView
        android:id="@+id/user_black_line_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_register_activity"
        android:layout_marginLeft="@dimen/thirty_px"
        android:layout_marginRight="@dimen/thirty_px"
        android:layout_marginTop="@dimen/sixteen_px"
        android:background="@mipmap/userblackline" />

    <TextView
        android:id="@+id/tv_phone_number_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_black_line_register_activity"
        android:layout_marginLeft="@dimen/thirty_px"
        android:layout_marginTop="@dimen/forty_px"
        android:text="@string/mobilePhoneNo"
        android:textColor="@color/dark"
        android:textSize="@dimen/twenty_four_px" />

    <EditText
        android:id="@+id/et_user_number_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone_number_register"
        android:layout_marginLeft="@dimen/thirty_px"
        android:layout_marginRight="@dimen/thirty_px"
        android:layout_marginTop="@dimen/twenty_px"
        android:inputType="phone"
        android:background="@mipmap/hint_phonenum" />

    <TextView
        android:id="@+id/tv_verification_code_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_user_number_register"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:text="验证码"
        android:textColor="#333"
        android:textSize="24px" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/linearlayout_verification_code_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_verification_code_register"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="20px"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verification_code_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/hint_phonenum" />

        <TextView
            android:id="@+id/tv_send_verification_code_register"
            android:layout_width="@dimen/two_hundred_and_ten_px"
            android:layout_height="match_parent"
            android:background="@drawable/selector_captcha_button"
            android:gravity="center"
            android:text="@string/sendVerificationCode"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_six_px" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_verification_code_register"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_verification_code_register"
            android:layout_marginTop="@dimen/thirty_px"
            android:text="@string/setThePassword"
            android:textColor="@color/dark"
            android:textSize="@dimen/twenty_four_px"

            />

        <EditText
            android:id="@+id/et_password_first_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_px"
            android:layout_weight="1"
            android:background="@mipmap/hint_phonenum" />

        <TextView
            android:background="@drawable/selector_create_id_button"
            android:id="@+id/tv_create_account_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fifty_px"
            android:text="@string/createAccount"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_four_px"
            android:gravity="center"/>

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>